<resources>
    <string name="app_name">Fitness Buddy</string>

    <string name="splash_heading">Ready to\nget fit?</string>
    <string name="splash_tag_line">We will help you achieve your goals!</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="splash_logo_alt">Fitness Buddy Logo</string>
    <string name="splash_back_btn_alt">Go back button</string>
    <string name="login_enter_email">Enter Email</string>
    <string name="login_enter_password">Enter Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_create_account">Create Account</string>
    <string name="enter_full_name">Full Name</string>

    <string name="create_account">Create Account</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_height">Height</string>
    <string name="signup_weight">Weight</string>
    <string name="signup_select_gender">Select your Gender</string>
    <string name="signup_select_age">Select your Age</string>
    <string name="signup_male">Male</string>
    <string name="signup_female">Female</string>
    <string name="signup_other">Other</string>
    <string name="next">Next</string>
    <string name="signup_done">Done</string>
    <string name="signup_step_one">1/2</string>
    <string name="signup_step_two">2/2</string>

    <string name="verification_text">Verification</string>
    <string name="verification_description_text">Enter the verification code sent to your email</string>
    <string name="verification_code_text">co\nde</string>
    <string name="signup_verify_code_text">Verify Code</string>

    <string name="community_routines">Community Routines</string>
    <string name="personal_routines">Personal Routines</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>

    <string name="default_card_title">Routine Title</string>
    <string name="default_card_category">Category</string>
    <string name="default_card_difficulty">Difficulty</string>
    <string name="default_card_weight_field">Weight Loss</string>
    <string name="default_card_difficulty_field">Rookie</string>
    
    <string name="cycle_title1">Warmup Cycle</string>
    <string name="cycle_title2">Exercise Cycle</string>
    <string name="cycle_title3">Cooldown Cycle</string>
    <string name="cycle_series">Series</string>
    <string name="cycle_name">Cycle Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_duration">Duration</string>
    <string name="exercise_repetitions">Repetitions</string>
    <string name="repetitions_number">x</string>
    <string name="duration_number">x</string>
    <string name="series_number">x</string>

    <string name="default_exercise_title">-</string>
    <string name="default_exercise_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="default_reps_title">Reps</string>
    <string name="default_reps">-</string>
    <string name="default_timer_title">Timer</string>
    <string name="default_timer_value">-</string>
    <string name="default_fab_pause_desc">PAUSE/PLAY</string>
    <string name="default_fab_next_desc">NEXT</string>
    <string name="default_fab_back_desc">BACK</string>

    <string name="error">Error %1$s (%2$d)</string>
    <string name="loading">Loading…</string>
    <string name="fab_play_button">fab_play_button</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Already on favorites</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="please_rate_this_routine">Please rate this routine</string>
    <string name="routine_execution_exercise_name">Name</string>
    <string name="routine_execution_exercise_time">Time</string>
    <string name="routine_execution_exercise_reps">Reps</string>
    <string name="execution_list_item_name">-</string>
    <string name="execution_list_item_time">-</string>
    <string name="execution_list_item_reps">-</string>
    <string name="log_out_message">Want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="order_by">Order By</string>

    <string-array name="order_by_array">
        <item>Title</item>
        <item>Rating</item>
        <item>Difficulty</item>
        <item>Category</item>
    </string-array>

    <string-array name="order_by_direction_array">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>


</resources>