<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_web"
    android:padding="30dp"
    tools:context=".splash.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/splash_logo_alt"
            android:src="@drawable/splash_screen_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/splash_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:ignore="AllCaps" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:text="@string/splash_tag_line"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/login_btn"
                style="@style/splashScreenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:onClick="callLoginScreen"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_login" />

            <Button
                android:id="@+id/signup_btn"
                style="@style/splashScreenButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/muli"
                android:onClick="callSignUpScreen"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>