<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_web"
    android:padding="30dp"
    tools:context=".splash.register.RegisterStepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="callPreviousStep"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back"
            android:transitionName="transition_back_btn"
            android:contentDescription="@string/splash_back_btn_alt" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />

            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_white_border"
                android:fontFamily="@font/muli_black"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup_step_two"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:transitionName="transition_slide_text" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity=""
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/signup_select_gender"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/signup_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_radio_male_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:buttonTint="@color/white"

                    android:fontFamily="@font/muli"
                    android:text="@string/signup_male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/signup_radio_female_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/muli"
                    android:text="@string/signup_female"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/signup_radio_other_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/muli"
                    android:text="@string/signup_other"
                    android:textColor="@color/white" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/signup_select_age"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/signup_age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:theme="@style/DatePickerWhite" />

        </LinearLayout>


        <Button
            android:id="@+id/signup_done_btn"
            style="@style/splashScreenButton"
            android:layout_width="match_parent"
            android:onClick="callVerificationScreen"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:fontFamily="@font/muli"
            android:text="@string/signup_done" />
    </LinearLayout>

</ScrollView>