<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/purple_web"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/execution_list_item_name" />

        <TextView
            android:id="@+id/duration_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/execution_list_item_time" />

        <TextView
            android:id="@+id/repetitions_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/execution_list_item_reps" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>