<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".splash.register.RegisterVerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="callPreviousStep"
            android:contentDescription="@string/splash_back_btn_alt"
            android:padding="5dp"
            android:src="@drawable/ic_close"
            app:tint="@color/purple_web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:includeFontPadding="false"
            android:text="@string/verification_code_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_web"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:includeFontPadding="false"
            android:text="@string/verification_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/purple_web"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli"
            android:includeFontPadding="false"
            android:text="@string/verification_description_text"
            android:textAlignment="center"
            android:textColor="@color/purple_web"
            android:textSize="16sp" />

        <com.chaos.view.PinView
            android:id="@+id/verification_pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="text"
            android:itemBackground="@color/light_white"
            android:textColor="@color/purple_web"
            app:cursorColor="@color/purple_web"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/purple_web" />

        <Button
            style="@style/splashScreenButton"
            android:onClick="callVerifyCode"
            android:backgroundTint="@color/purple_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signup_verify_code_text" />


    </LinearLayout>

</ScrollView>