<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_web"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_exercise_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="232dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/exerciseVideo"
                    android:layout_width="351dp"
                    android:layout_height="232dp"
                    android:layout_gravity="center_horizontal"
                    app:showSeekBar="false"
                    app:showVideoCurrentTime="false"
                    app:showVideoDuration="false"
                    app:showYouTubeButton="false"
                    app:enableAutomaticInitialization="false"
                    app:showFullScreenButton="false"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/exerciseDescription"
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/default_exercise_description"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repetitionsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/default_reps_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/repetitionsCounter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/default_reps"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/default_timer_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/timerCounter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/default_timer_value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/prevExerciseBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    app:rippleColor="#FFFFFF"
                    app:srcCompat="@android:drawable/ic_media_previous"
                    android:contentDescription="@string/default_fab_back_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_gravity="center"
                    android:id="@+id/toggleExerciseBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_media_pause"
                    android:contentDescription="@string/default_fab_pause_desc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_gravity="center"
                    android:id="@+id/nextExerciseBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_media_next"
                    android:contentDescription="@string/default_fab_next_desc" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>