<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_web"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/routine_execution_exercise_name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/routine_execution_exercise_time" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/routine_execution_exercise_reps" />

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/routine_execution_recycler"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/finishRoutineButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="40dp"
                        android:layout_weight="1"
                        android:visibility="invisible"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:contentDescription="@string/default_fab_back_desc"
                        app:srcCompat="@drawable/ic_baseline_done_24" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/exerciseDetailBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="40dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:contentDescription="@string/default_fab_next_desc"
                        app:srcCompat="@drawable/ic_baseline_open_in_full_24" />
                </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>